# dati-semantic-ontology-ai-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  env.example  pyproject.toml
.github/workflows/: docker-publish.yml
ext/java/: pom.xml
scripts/: update-codegen.sh
src/ai_assistant/: __init__.py  __main__.py  cli.py  gscape.py  logging.py  operate.py  owl.py  prompt.py  rag.py  utils.py
src/ai_assistant/jvm/: __init__.py  java.py  owlapi.py
src/ai_assistant/kg/: __init__.py  nano_vector_db_impl.py  networkx_impl.py
src/ai_assistant/llm/: openai.py
src/ai_assistant/server/: __init__.py  main.py  security_api.py
src/ai_assistant/server/apis/: api_semantiche_api.py  api_semantiche_api_base.py  convert_api.py  convert_api_base.py  prompt_api.py  prompt_api_base.py  rag_api.py  rag_api_base.py
src/ai_assistant/server/impl/: convert_api_impl.py  prompt_api_impl.py  prompt_templates.py  rag_api_impl.py
src/ai_assistant/server/models/: action.py  action_involved_elements.py  action_user.py  auto_chart_request.py  chart_configuration.py  class_instance_entity.py  data_property_value.py  describe_chart_request.py  describe_individual_request.py  describe_ontology_entity_request.py  describe_ontology_entity_request_property_info.py  describe_sparql_query_request.py  diagram.py  edge.py  element.py  element_ai_generated.py  file_info.py  function_properties_enum.py  grapholscape_annotation.py  grapholscape_entity.py  hierarchy.py  (+27 more)
tests/: conftest.py  gscape2owl_test.py  owl2gscape_test.py  test_rag_api.py
tests/resources/: CLV.owl  books.json  transfmkt.gscape
